--- a/client/index.html
+++ b/client/index.html
@@ -5,10 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Take Care</title>
     <link rel="icon" type="image/png" href="resources/images/favicon-32x32 copy.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="src/index.js"></script>
 </head>
 <body>
+
+    <div id="user-action">
+        <h1 class="greeting">Welcome! Are you logging in or creating a new account?</h1>
+        <button type="button" id="login-button" class="btn btn-primary user-choice">Login</button>
+        <button type="button" id="signup-button" class="btn btn-primary user-choice">Create Account</button>
+    </div>
+
+    <div class="signup">
+        <h2>Create Account</h2>
+        <form id="signup-form" class="login-signup-form">
+            <div class="form-floating mb-6">
+                <input type="text" class="form-control" id="name" name="name" placeholder="John Doe" value="John Doe">
+                <label for="name">Name</label>
+            </div>
+            <div class="form-floating mb-6">
+                <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" value="name@example.com">
+                <label for="email">Email Addess</label>
+            </div>
+        </form>
+    </div>
+
+    <div class="login">
+        <h2>Login</h2>
+        <form id="login-form" class="login-signup-form">
+            <div class="form-floating mb-6">
+                <input type="email" class="form-control" id="login-email" name="login-email" placeholder="name@example.com" value="name@example.com">
+                <label for="login-email">Email Addess</label>
+            </div>
+        </form>
+    </div>
     
 </body>
 </html>
