Added a lot of Design and some render page functionality for noew members

--- a/client/index.html
+++ b/client/index.html
@@ -10,10 +10,12 @@
     <script src="src/index.js"></script>
 </head>
 <body>
+
+    <h1 id="title-section">Welcome to <img src="resources/images/favicon-32x32 copy.png" alt="Take Care Icon"><span class="comp-name">TakeCare</span></h1>
+
     <div id="welcome-page">
 
         <div id="user-action">
-            <h1 class="greeting">Welcome to Take Care!<img src="resources/images/favicon-32x32 copy.png" alt="Take Care Icon"></h1>
             <h2>Are you logging in or creating a new account?</h2>
         </div>
 
@@ -51,6 +53,24 @@
 
         </div>
     
+    </div>
+
+    <div id="profile-page" class="container">
+        <div class="row">
+
+            <div id="profile-greeting" class="col-md-4 profile-column">
+
+            </div>
+
+            <div id="support-groups" class="col-md-4 profile-column">
+
+            </div>
+
+            <div id="check-ins" class="col-md-4 profile-column">
+
+            </div>
+
+        </div>
     </div>
     
 </body>
