--- a/client/index.html
+++ b/client/index.html
@@ -63,11 +63,18 @@
             </div>
 
             <div id="support-groups" class="col-md-4 profile-column">
-
+                <h2>All Groups</h2>
+                <form id="new-group-form">
+                   <select id="new-group-dropdown" name="group-selected" class="group-select" aria-label="select a support group">
+                       <option value="1">Group 1</option>
+                       <option value="2">Group 2</option>
+                       <option value="3">Group 3</option>
+                   </select> 
+                   <input type="submit" class="btn btn-success" value="Join This Group!">
+                </form>
             </div>
 
             <div id="check-ins" class="col-md-4 profile-column">
-
             </div>
 
         </div>
