Added the form to join a group.

--- a/client/index.html
+++ b/client/index.html
@@ -63,9 +63,10 @@
             </div>
 
             <div id="support-groups" class="col-md-4 profile-column">
-                <h2>All Groups</h2>
-                <form id="new-group-form">
-                   <select id="new-group-dropdown" name="group-selected" class="group-select" aria-label="select a support group">
+                <ul id="support-group-list"></ul>
+                <form class="hide" id="new-group-form">
+                    <h2>Select A Group</h2>
+                   <select id="new-group-dropdown" name="group" class="group-select" aria-label="select a support group">
                        <option value="1">Group 1</option>
                        <option value="2">Group 2</option>
                        <option value="3">Group 3</option>
