Improved the new group form. Toggles to show and not show. Also make sure that form can be accepted correctly.

--- a/client/index.html
+++ b/client/index.html
@@ -66,11 +66,7 @@
                 <ul id="support-group-list"></ul>
                 <form class="hide" id="new-group-form">
                     <h2>Select A Group</h2>
-                   <select id="new-group-dropdown" name="group" class="group-select" aria-label="select a support group">
-                       <option value="1">Group 1</option>
-                       <option value="2">Group 2</option>
-                       <option value="3">Group 3</option>
-                   </select> 
+                   <select id="new-group-dropdown" name="group" class="group-select col-md-4" aria-label="select a support group"></select> 
                    <input type="submit" class="btn btn-success" value="Join This Group!">
                 </form>
             </div>
