Cleaned up appearance of buttons to join or leave a group

--- a/client/index.html
+++ b/client/index.html
@@ -63,15 +63,17 @@
             </div>
 
             <div id="support-groups" class="col-md-4 profile-column">
-                <ul id="support-group-list"></ul>
+                <h3 class="section-title">Active Support Groups</h3>
+                <ul id="support-group-list" class="list-group"></ul>
                 <form class="hide" id="new-group-form">
                     <h2>Select A Group</h2>
-                   <select id="new-group-dropdown" name="group" class="group-select col-md-4" aria-label="select a support group"></select> 
-                   <input type="submit" class="btn btn-success" value="Join This Group!">
+                    <select id="new-group-dropdown" name="group" class="group-select col-md-4" aria-label="select a support group"></select> 
+                    <input type="submit" class="btn btn-success" value="Join This Group!">
                 </form>
             </div>
 
             <div id="check-ins" class="col-md-4 profile-column">
+                <h3 class="section-title">Check-Ins</h3>
             </div>
 
         </div>
