Added the ability to update comments on check-ins.

--- a/client/index.html
+++ b/client/index.html
@@ -94,7 +94,7 @@
                 </form>
             </div>
 
-            <div id="new-check-in-form-section" class="col-md-4 form-column">
+            <div id="check-in-form-section" class="col-md-4 form-column">
                 <form id="new-check-in-form" class="hide">
 
                     <h4>Show us how you feel.</h4>
